--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,14 @@
         "filament/upgrade": "^3.2",
         "friendsofphp/php-cs-fixer": "^3.17",
         "kitloong/laravel-migrations-generator": "^7.1",
+        "larastan/larastan": "^2.0",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^8.0",
+        "nunomaduro/collision": "^8.5",
+        "phpstan/phpstan": "^1.12",
         "phpunit/phpunit": "^10.1",
+        "rector/rector": "^1.2",
         "reliese/laravel": "^1.2",
         "spatie/laravel-ignition": "^2.0"
     },
