--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/framework": "^11.6",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
+        "spatie/laravel-permission": "^6.16",
         "stechstudio/filament-impersonate": "*"
     },
     "require-dev": {
